FEAUTRE: Fixed table text alignment

--- a/assets/scss/admin-styles.scss
+++ b/assets/scss/admin-styles.scss
@@ -126,7 +126,7 @@ $file-cleaner-delete-btn-hover-bg: #c0392b;
             white-space: nowrap;
 
             &:nth-child(2), &:nth-child(3) {
-                text-align: right;
+                text-align: left;
             }
         }
 
